fix cropped pos

--- a/style.css
+++ b/style.css
@@ -13,25 +13,25 @@ span.badge.new:after {
 }
 .eldars1 {
 	background-image: url("images/eldars1.png");
-	background-position-y: 1000px;
+	background-position-y: -300px;
 	background-position-x: -180px;
 }
 .da1 {
 	background-image: url("images/da1.jpg");
-	background-position-y: -120px;
+	background-position-y: -60px;
 	background-position-x: 280px;
 	background-repeat-x: no-repeat;
 }
 .da2 {
 	background-image: url("images/da2.jpg");
-	background-position-y: -320px;
+	background-position-y: -40px;
 	background-position-x: 280px;
 	background-repeat-x: no-repeat;
 	background-color: #eee;
 }
 .csm1 {
 	background-image: url("images/csm1.jpg");
-	background-position-y: -80px;
+	background-position-y: -20px;
 	background-position-x: 380px;
 	background-repeat-x: no-repeat;
 }
@@ -43,7 +43,7 @@ span.badge.new:after {
 }
 .necrons1 {
 	background-image: url("images/necrons1.jpg");
-	background-position-y: -120px;
+	background-position-y: -80px;
 	background-position-x: 320px;
 	background-repeat-x: no-repeat;
 } 
